yaml/fastapi.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: fastapi-rollout
  namespace: chatting
spec:
  replicas: 7
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: stradivirus/chatting:latest
        ports:
        - containerPort: 8000
  strategy:
    canary:
      steps:
      - setWeight: 28  # 2/7 ≈ 28%
      - pause: {duration: 60s}
      - setWeight: 57  # 4/7 ≈ 57%
      - pause: {duration: 60s}
      - setWeight: 100  
      - pause: {duration: 60s}
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: chatting
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
