yaml/kafka-count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-count
  namespace: chat
  labels:
    app: kafka-count
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-count
  template:
    metadata:
      labels:
        app: kafka-count
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka:latest
        ports:
        - containerPort: 9092
          name: kafka
        resources:
          limits:
            memory: "2Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-count-svc
  namespace: chat
spec:
  ports:
  - port: 9092
    name: kafka
  selector:
    app: kafka-count
